centjes-gen/test_resources/balance/error/to-chf/CONVERT_ERROR_MISSING_PRICE.cent
currency USD 0.01
currency CHF 0.05

2023-12-15
  * assets +1.0 USD
  * income -1.0 USD
